--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Empresas/Edit.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Empresas/Edit.cshtml
@@ -11,8 +11,8 @@
 <hr />
 
 <div class="form-group">
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-    <input type="submit" value="Save" form="editForm" class="btn btn-primary" />
+    <a asp-action="Index" class="btn btn-secondary">Volver</a>
+    <input type="submit" value="Guardar" form="editForm" class="btn btn-primary" />
 </div>
 
 <style>
@@ -104,6 +104,9 @@
     /* Para asegurarnos que los select tengan el mismo tamaño que los inputs */
     select.form-control {
         width: 100%;
+    }
+     .fiscal{
+        width:50vw;
     }
 </style>
 
