--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Create.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Create.cshtml
@@ -9,7 +9,6 @@
 
 <h4>Nomina</h4>
 <div class="form-group">
-        <button type="submit" class="btn btn-primary">Crear</button>
         <a asp-action="Index" class="btn btn-secondary">Volver</a>
     </div>
 <hr />
@@ -64,93 +63,57 @@
             <div class="col-md-6">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="EmpresaId" class="control-label"></label>
+                    <label asp-for="EmpresaId" class="control-label">Empresa</label>
                     <select asp-for="EmpresaId" class="form-control" asp-items="ViewBag.EmpresaId"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FechaPago" class="control-label"></label>
+                    <label asp-for="FechaPago" class="control-label">Fecha de Pago</label>
                     <input asp-for="FechaPago" class="form-control" />
                     <span asp-validation-for="FechaPago" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="SatPeriocidadPagoId" class="control-label"></label>
-                    <select asp-for="SatPeriocidadPagoId" class="form-control" asp-items="ViewBag.SatPeriocidadPagoId"></select>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PeriodoId" class="control-label"></label>
+                    <label asp-for="PeriodoId" class="control-label">Periodo de nomina</label>
                     <select asp-for="PeriodoId" class="form-control" asp-items="ViewBag.PeriodoId"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="SatTipoContratoId" class="control-label"></label>
-                    <select asp-for="SatTipoContratoId" class="form-control" asp-items="ViewBag.SatTipoContratoId"></select>
-                </div>
-                <div class="form-group">
-                    <label asp-for="NominaExtraordinariaId" class="control-label"></label>
-                    <input asp-for="NominaExtraordinariaId" class="form-control" />
-                    <span asp-validation-for="NominaExtraordinariaId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ConceptoNomina" class="control-label"></label>
+                    <label asp-for="ConceptoNomina" class="control-label">Concepto Nomina</label>
                     <input asp-for="ConceptoNomina" class="form-control" />
                     <span asp-validation-for="ConceptoNomina" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ConceptoTimbrado" class="control-label"></label>
+                    <label asp-for="ConceptoTimbrado" class="control-label">Concepto timbrado</label>
                     <input asp-for="ConceptoTimbrado" class="form-control" />
                     <span asp-validation-for="ConceptoTimbrado" class="text-danger"></span>
                 </div>
             </div>
 
             <!-- Segunda columna -->
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="TotalTrabajadores" class="control-label"></label>
-                    <input asp-for="TotalTrabajadores" class="form-control" />
-                    <span asp-validation-for="TotalTrabajadores" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TotalPercepciones" class="control-label"></label>
-                    <input asp-for="TotalPercepciones" class="form-control" />
-                    <span asp-validation-for="TotalPercepciones" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TotalDeducciones" class="control-label"></label>
-                    <input asp-for="TotalDeducciones" class="form-control" />
-                    <span asp-validation-for="TotalDeducciones" class="text-danger"></span>
-                </div>
+            <div class="col-md-5">
+                
                 <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Extraordinaria" /> @Html.DisplayNameFor(model => model.Extraordinaria)
+                    <label class="form-check-label">¿Es extraordinaria?<br>
+                        <input class="form-check-input" asp-for="Extraordinaria" /> Sí 
                     </label>
                 </div>
                 <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Generada" /> @Html.DisplayNameFor(model => model.Generada)
+                    <label class="form-check-label">¿Fue autorizada? <br/>
+                        <input class="form-check-input" asp-for="Autorizada" /> Sí
                     </label>
                 </div>
                 <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Autorizada" /> @Html.DisplayNameFor(model => model.Autorizada)
+                    <label class="form-check-label">¿Fue timbrada? <br />
+                        <input class="form-check-input" asp-for="Timbrada" /> Sí
                     </label>
                 </div>
                 <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Timbrada" /> @Html.DisplayNameFor(model => model.Timbrada)
+                    <label class="form-check-label">¿Fue cerrada? <br />
+                        <input class="form-check-input" asp-for="Cerrada" /> Sí
                     </label>
                 </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Cerrada" /> @Html.DisplayNameFor(model => model.Cerrada)
-                    </label>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Estatus" class="control-label"></label>
-                    <input asp-for="Estatus" class="form-control" />
-                    <span asp-validation-for="Estatus" class="text-danger"></span>
-                </div>
+                
             </div>
         </div>
-  
+        <button type="submit" class="btn btn-primary">Crear</button>
     </form>
 </div>
 
