--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Index.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Index.cshtml
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-header">Estado de la Nómina</div>
+            <div class="section-header fiscal">Estado de la Nómina</div>
             <div class="data">
                 <div class="data-item"><span class="data-label">Generada:</span> @Html.DisplayFor(modelItem => item.Generada)</div>
                 <div class="data-item"><span class="data-label">Autorizada:</span> @Html.DisplayFor(modelItem => item.Autorizada)</div>
