--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/NominaDetalle/Delete.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/NominaDetalle/Delete.cshtml
@@ -49,8 +49,8 @@
             <div class="row row-divider info-container">
                 <div class="col-md-6">
                     <h5>Relación con Incidencias</h5>
-                    <p><strong>Incidencia:</strong> @Html.DisplayFor(model => model.Incidencia.Id)</p>
-                    <p><strong>Trabajador:</strong> @Html.DisplayFor(model => model.Trabajador.Id)</p>
+                    <p><strong>Incidencia:</strong> @Html.DisplayFor(model => model.Incidencia.Descripcion)</p>
+                    <p><strong>Trabajador:</strong> @Html.DisplayFor(model => model.Trabajador.Nombre)</p>
                 </div>
             </div>
         </div>
