--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/NominaDetalle/Details.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/NominaDetalle/Details.cshtml
@@ -39,9 +39,9 @@
             <div class="row row-divider info-container">
                 <div class="col-md-6">
                     <h5>Relaciones</h5>
-                    <p><strong>Empresa:</strong> @Html.DisplayFor(model => model.Empresa.Id)</p>
-                    <p><strong>Incidencia:</strong> @Html.DisplayFor(model => model.Incidencia.Id)</p>
-                    <p><strong>Periodo:</strong> @Html.DisplayFor(model => model.Periodo.Id)</p>
+                    <p><strong>Empresa:</strong> @Html.DisplayFor(model => model.Empresa.Nombre)</p>
+                    <p><strong>Incidencia:</strong> @Html.DisplayFor(model => model.Incidencia.Descripcion)</p>
+                    <p><strong>Periodo:</strong> @Html.DisplayFor(model => model.Periodo.Descripcion)</p>
                 </div>
                 <div class="col-md-6">
                     <h5>Trabajador</h5>
