--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Trabajadores/Create.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Trabajadores/Create.cshtml
@@ -174,7 +174,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="CumpleReqDisminucion" /> Cumple requisitos de disminucion @Html.DisplayNameFor(model => model.CumpleReqDisminucion)
+                    <input class="form-check-input" asp-for="CumpleReqDisminucion" /> Cumple requisitos de disminucion
                 </label>
             </div>
             <div class="form-group">
